--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -28,6 +28,11 @@
 			<version>0.2.2</version>
 		</dependency>
         <dependency>
+            <groupId>com.sshtools</groupId>
+            <artifactId>jadbus-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform-jpms</artifactId>
             <version>5.13.0</version>
@@ -45,6 +50,13 @@
 	</dependencies>
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
