--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -8,6 +8,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
+	<packaging>jar</packaging>
 	<artifactId>jadbus-lib</artifactId>
 	<dependencies>
 		<dependency>
