--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -72,62 +72,69 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <configuration>
-                    <outputDirectory>
-                        ${project.build.directory}/dependencies</outputDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <stripVersion>true</stripVersion>
-                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.install4j</groupId>
-                <artifactId>install4j-maven</artifactId>
-                <executions>
-                    <execution>
-                        <id>compile-installers</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <variables>
-                                <install4j.phase>${install4j.phase}</install4j.phase>
-                                <install4j.appleId>${install4j.appleId}</install4j.appleId>
-                                <install4j.exe.suffix>${install4j.exe.suffix}</install4j.exe.suffix>
-                                <install4j.macSigning>${install4j.macSigning}</install4j.macSigning>
-                                <install4j.macPkcs12File>${install4j.macPkcs12File}</install4j.macPkcs12File>
-                                <install4j.windowsSigning>${install4j.windowsSigning}</install4j.windowsSigning>
-                                <install4j.windowsKeystoreIssuer>${install4j.windowsKeystoreIssuer}</install4j.windowsKeystoreIssuer>
-                                <install4j.windowsKeystoreSerial>${install4j.windowsKeystoreSerial}</install4j.windowsKeystoreSerial>
-                                <install4j.windowsKeystoreSubject>${install4j.windowsKeystoreSubject}</install4j.windowsKeystoreSubject>
-                                <install4j.updatesBase>${install4j.updatesBase}</install4j.updatesBase>
-                                <install4j.jaulAppId>${install4j.jaulAppId}</install4j.jaulAppId>
-                                <install4j.jaulUpdaterId>${install4j.jaulUpdaterId}</install4j.jaulUpdaterId>
-                            </variables>
-                            <release>${product.version}-${build.number}</release>
-                            <mediaTypes>${build.mediaTypes}</mediaTypes>
-                            <projectFile>${build.install4j.project}</projectFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <profiles>
+        <profile>
+            <id>installers</id>
+            <build>
+				<plugins>
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-dependency-plugin</artifactId>
+		                <configuration>
+		                    <outputDirectory>
+		                        ${project.build.directory}/dependencies</outputDirectory>
+		                </configuration>
+		                <executions>
+		                    <execution>
+		                        <id>copy-dependencies</id>
+		                        <phase>package</phase>
+		                        <goals>
+		                            <goal>copy-dependencies</goal>
+		                        </goals>
+		                        <configuration>
+		                            <stripVersion>true</stripVersion>
+		                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+		                        </configuration>
+		                    </execution>
+		                </executions>
+		            </plugin>
+		            <plugin>
+		                <groupId>com.install4j</groupId>
+		                <artifactId>install4j-maven</artifactId>
+		                <executions>
+		                    <execution>
+		                        <id>compile-installers</id>
+		                        <phase>package</phase>
+		                        <goals>
+		                            <goal>compile</goal>
+		                        </goals>
+		                        <configuration>
+		                            <variables>
+		                                <install4j.phase>${install4j.phase}</install4j.phase>
+		                                <install4j.appleId>${install4j.appleId}</install4j.appleId>
+		                                <install4j.exe.suffix>${install4j.exe.suffix}</install4j.exe.suffix>
+		                                <install4j.macSigning>${install4j.macSigning}</install4j.macSigning>
+		                                <install4j.macPkcs12File>${install4j.macPkcs12File}</install4j.macPkcs12File>
+		                                <install4j.windowsSigning>${install4j.windowsSigning}</install4j.windowsSigning>
+		                                <install4j.windowsKeystoreIssuer>${install4j.windowsKeystoreIssuer}</install4j.windowsKeystoreIssuer>
+		                                <install4j.windowsKeystoreSerial>${install4j.windowsKeystoreSerial}</install4j.windowsKeystoreSerial>
+		                                <install4j.windowsKeystoreSubject>${install4j.windowsKeystoreSubject}</install4j.windowsKeystoreSubject>
+		                                <install4j.updatesBase>${install4j.updatesBase}</install4j.updatesBase>
+		                                <install4j.jaulAppId>${install4j.jaulAppId}</install4j.jaulAppId>
+		                                <install4j.jaulUpdaterId>${install4j.jaulUpdaterId}</install4j.jaulUpdaterId>
+		                            </variables>
+		                            <release>${product.version}-${build.number}</release>
+		                            <mediaTypes>${build.mediaTypes}</mediaTypes>
+		                            <projectFile>${build.install4j.project}</projectFile>
+		                        </configuration>
+		                    </execution>
+		                </executions>
+		            </plugin>
+				</plugins>
+			</build>
+        </profile>
         <!-- Merge Installers -->
         <profile>
             <id>merge-installers</id>
