--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-api</artifactId> 
         </dependency>
     </dependencies>
 </project>
