--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.github.hypfvieh</groupId>
+				<artifactId>dbus-java-transport-native-unixsocket</artifactId>
+				<version>${dbus.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.hypfvieh</groupId>
 				<artifactId>dbus-java-core</artifactId>
 				<version>${dbus.version}</version>
 			</dependency>
