--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -55,8 +55,9 @@
 		</dependency>
 		<dependency>
 		    <groupId>com.kohlschutter.junixsocket</groupId>
-		    <artifactId>junixsocket-common</artifactId>
+		    <artifactId>junixsocket-core</artifactId> 
 		    <version>2.10.0</version>
+		    <type>pom</type>
 		</dependency>
 	</dependencies>
 	<build>
