--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -20,8 +20,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.sshtools</groupId>
-			<artifactId>jini</artifactId>
-			<version>0.2.2</version>
+			<artifactId>jini-config</artifactId>
+			<version>0.3.3-SNAPSHOT</version>
 		</dependency>
         <dependency>
             <groupId>com.sshtools</groupId>
