--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -168,7 +168,8 @@
                             <inputs>
                                 <input>${project.build.directory}/media-macos/updates.xml</input>
                                 <input>${project.build.directory}/media-windows/updates.xml</input>
-                                <input>${project.build.directory}/media-linux/updates.xml</input>
+                                <input>${project.build.directory}/media-linux-amd64/updates.xml</input>
+                                <input>${project.build.directory}/media-linux-aarch64/updates.xml</input>
                             </inputs>
                             <output>${project.build.directory}/media/updates.xml</output>
                         </configuration>
