--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 			${project.basedir}/src/main/install4j/jadbus.install4j</build.install4j.project>
 		<build.projectProperties>${basedir}/hypersocket.build.properties</build.projectProperties>
 		<build.userProperties>${user.home}/.hypersocket.build.properties</build.userProperties>
+		<build.mediaTypes>windows,unixInstaller,macos,macosFolder,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</build.mediaTypes>
+		<build.buildIds></build.buildIds>
 		
-		<install4j.mediaTypes>windows,unixInstaller,macos,macosFolder,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</install4j.mediaTypes>
-		<install4j.buildIds></install4j.buildIds>
 		<install4j.phase>stable</install4j.phase>
 		<install4j.macSigning>true</install4j.macSigning>
 		<install4j.macPkcs12File>~/.logonbox-developer-id.p12</install4j.macPkcs12File>
