More stash name issues Wrong stash name 22? There is more to it, adding back DEBUG Tsk Debug Try again Oop. Re-enable Build arm. Temporarily disable aarch64 build, its not really needed  anyway. Hrm A difference? And again Another go Missing j Get installers working

--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>jini-config</artifactId>
-			<version>0.3.3-SNAPSHOT</version>
+			<version>0.3.3</version>
 		</dependency>
         <dependency>
             <groupId>com.sshtools</groupId>
