--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -113,7 +113,7 @@
 										<artifactItem>
 											<groupId>com.sshtools</groupId>
 											<artifactId>jaul</artifactId>
-											<version>0.9.11-SNAPSHOT</version>
+											<version>0.9.11</version>
 										</artifactItem>
 									</artifactItems>
 								</configuration>
@@ -135,9 +135,7 @@
 		                                <install4j.phase>${install4j.phase}</install4j.phase>
 		                                <install4j.appleId>${install4j.appleId}</install4j.appleId>
 		                                <install4j.exe.suffix>${install4j.exe.suffix}</install4j.exe.suffix>
-		                                <install4j.macSigning>${install4j.macSigning}</install4j.macSigning>
 		                                <install4j.macPkcs12File>${install4j.macPkcs12File}</install4j.macPkcs12File>
-		                                <install4j.windowsSigning>${install4j.windowsSigning}</install4j.windowsSigning>
 		                                <install4j.windowsKeystoreIssuer>${install4j.windowsKeystoreIssuer}</install4j.windowsKeystoreIssuer>
 		                                <install4j.windowsKeystoreSerial>${install4j.windowsKeystoreSerial}</install4j.windowsKeystoreSerial>
 		                                <install4j.windowsKeystoreSubject>${install4j.windowsKeystoreSubject}</install4j.windowsKeystoreSubject>
@@ -148,7 +146,7 @@
 		                            <release>${product.version}-${build.number}</release>
 		                            <mediaTypes>${build.mediaTypes}</mediaTypes>
 		                            <buildIds>${build.buildIds}</buildIds>
-		                            <projectFile>${build.install4j.project}</projectFile>
+		                            <projectFile>src/main/install4j/jadbus.install4j</projectFile>
 		                        </configuration>
 		                    </execution>
 		                </executions>
@@ -167,7 +165,8 @@
                         <version>0.0.1</version>
                         <configuration>
                             <inputs>
-                                <input>${project.build.directory}/media-macos/updates.xml</input>
+                                <input>${project.build.directory}/media-macos-amd64/updates.xml</input>
+                                <input>${project.build.directory}/media-macos-aarch64/updates.xml</input>
                                 <input>${project.build.directory}/media-windows/updates.xml</input>
                                 <input>${project.build.directory}/media-linux-amd64/updates.xml</input>
                                 <input>${project.build.directory}/media-linux-aarch64/updates.xml</input>
