--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -21,5 +21,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId> 
         </dependency>
+        <dependency>
+					<groupId>com.install4j</groupId>
+					<artifactId>install4j-maven</artifactId>
+					<version>10.0.9</version>
+        </dependency>
     </dependencies>
 </project>
