--- a/pom.xml
+++ b/pom.xml
@@ -13,27 +13,25 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
 		<main.class>coms.sshtools.jadbus.DBusDaemon</main.class>
+		
 		<dbus.version>5.1.0</dbus.version>
 		<graalvm.version>0.10.2</graalvm.version>
-
-		<build.install4j.project>
-			${project.basedir}/src/main/install4j/jadbus.install4j</build.install4j.project>
-		<build.projectProperties>${basedir}/hypersocket.build.properties</build.projectProperties>
-		<build.userProperties>${user.home}/.hypersocket.build.properties</build.userProperties>
+		<picocli.version>4.7.6</picocli.version>
+		<native.image.annotations.version>0.9.3</native.image.annotations.version>
+		
+		<build.arch>${os.arch}</build.arch>
+		<build.platform>${build.os.family}-${os.arch}</build.platform>
+		<build.projectProperties>${project.basedir}/jadaptive.build.properties</build.projectProperties>
+		<build.userProperties>${user.home}/.jadaptive.build.properties</build.userProperties>
 		<build.mediaTypes>windows,unixInstaller,macos,macosFolder,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</build.mediaTypes>
 		<build.buildIds></build.buildIds>
-		
-		<install4j.phase>stable</install4j.phase>
-		<install4j.macSigning>true</install4j.macSigning>
-		<install4j.macPkcs12File>~/.logonbox-developer-id.p12</install4j.macPkcs12File>
-		<install4j.windowsSigning>true</install4j.windowsSigning>
+		<install4j.phase>continuous</install4j.phase>
+		<install4j.exe.suffix></install4j.exe.suffix>
 		<install4j.updatesBase>https://sshtools-public.s3.eu-west-1.amazonaws.com/jadbus</install4j.updatesBase>
 		<install4j.jaulAppId>com.sshtools.Jadbus</install4j.jaulAppId>
 		<install4j.jaulUpdaterId>54</install4j.jaulUpdaterId>
-		
-		<picocli.version>4.7.6</picocli.version>
-		<native.image.annotations.version>0.9.3</native.image.annotations.version>
 	</properties>
 	<url>https://jadaptive.com</url>
 	<licenses>
@@ -73,7 +71,7 @@
 			<dependency>
 				<groupId>com.sshtools</groupId>
 				<artifactId>jaul</artifactId>
-				<version>0.9.11-SNAPSHOT</version>
+				<version>0.9.11</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -134,7 +132,7 @@
 			<dependency>
 				<groupId>com.sshtools</groupId>
 				<artifactId>dbus-java-transport-ssh</artifactId>
-				<version>0.9.0-SNAPSHOT</version>
+				<version>0.9.9</version>
 			</dependency>
 		</dependencies>
 
@@ -173,7 +171,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
@@ -215,7 +213,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.10.1</version>
+					<version>3.12.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -225,12 +223,12 @@
 				<plugin>
 					<groupId>com.install4j</groupId>
 					<artifactId>install4j-maven</artifactId>
-					<version>10.0.6</version>
+					<version>10.0.9</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>3.3.0</version>
+					<version>3.5.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
