--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -142,6 +142,7 @@
 		                                <install4j.updatesBase>${install4j.updatesBase}</install4j.updatesBase>
 		                                <install4j.jaulAppId>${install4j.jaulAppId}</install4j.jaulAppId>
 		                                <install4j.jaulUpdaterId>${install4j.jaulUpdaterId}</install4j.jaulUpdaterId>
+		                                <install4j.jaulBranches>${install4j.jaulBranches}</install4j.jaulBranches>
 		                            </variables>
 		                            <release>${product.version}-${build.number}</release>
 		                            <mediaTypes>${build.mediaTypes}</mediaTypes>
