--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<install4j.updatesBase>https://sshtools-public.s3.eu-west-1.amazonaws.com/jadbus</install4j.updatesBase>
 		<install4j.jaulAppId>com.sshtools.Jadbus</install4j.jaulAppId>
 		<install4j.jaulUpdaterId>54</install4j.jaulUpdaterId>
+		<install4j.jaulBranches>54</install4j.jaulBranches>
 	</properties>
 	<url>https://jadaptive.com</url>
 	<licenses>
