--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -113,7 +113,7 @@
 										<artifactItem>
 											<groupId>com.sshtools</groupId>
 											<artifactId>jaul</artifactId>
-											<version>0.9.11</version>
+											<version>0.9.12-SNAPSHOT</version>
 										</artifactItem>
 									</artifactItems>
 								</configuration>
