--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -21,10 +21,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId> 
         </dependency>
-        <dependency>
-					<groupId>com.install4j</groupId>
-					<artifactId>install4j-maven</artifactId>
-					<version>10.0.9</version>
-        </dependency>
+        <!--<dependency>
+			<groupId>com.install4j</groupId>
+			<artifactId>install4j-runtime</artifactId>
+			<version>11.0.4</version>
+        </dependency>-->
     </dependencies>
 </project>
