--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 	<packaging>pom</packaging>
 	<description>A DBus Broker based on dbus-java.</description>
 	<properties>
-		<maven.compiler.target>21</maven.compiler.target>
-		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>24</maven.compiler.target>
+		<maven.compiler.source>24</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
@@ -25,7 +25,7 @@
 		<build.platform>${build.os.family}-${os.arch}</build.platform>
 		<build.projectProperties>${project.basedir}/jadaptive.build.properties</build.projectProperties>
 		<build.userProperties>${user.home}/.jadaptive.build.properties</build.userProperties>
-		<build.mediaTypes>windows,unixInstaller,macos,macosFolder,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</build.mediaTypes>
+		<build.mediaTypes>windows,unixInstaller,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</build.mediaTypes>
 		<build.buildIds></build.buildIds>
 		<install4j.phase>continuous</install4j.phase>
 		<install4j.exe.suffix></install4j.exe.suffix>
@@ -72,17 +72,17 @@
 			<dependency>
 				<groupId>com.sshtools</groupId>
 				<artifactId>jaul</artifactId>
-				<version>0.9.14</version>
+				<version>0.9.19</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>2.0.9</version>
+				<version>2.0.17</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-simple</artifactId>
-				<version>2.0.9</version>
+				<version>2.0.17</version>
 			</dependency>
 			<dependency>
 				<groupId>info.picocli</groupId>
@@ -96,9 +96,7 @@
 				<exclusions>
 					<exclusion>
 						<groupId>com.github.hypfvieh</groupId>
-						<artifactId>
-							dbus-java-transport-jnr-unixsocket
-						</artifactId>
+						<artifactId>dbus-java-transport-jnr-unixsocket</artifactId>
 					</exclusion>
 					<exclusion>
 						<groupId>ch.qos.logback</groupId>
@@ -133,7 +131,7 @@
 			<dependency>
 				<groupId>com.sshtools</groupId>
 				<artifactId>dbus-java-transport-ssh</artifactId>
-				<version>0.9.9</version>
+				<version>0.9.10</version>
 			</dependency>
 		</dependencies>
 
@@ -224,7 +222,7 @@
 				<plugin>
 					<groupId>com.install4j</groupId>
 					<artifactId>install4j-maven</artifactId>
-					<version>10.0.9</version>
+					<version>11.0.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -276,12 +274,6 @@
             </build>
         </profile>
     </profiles>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>ej-technologies</id>
-			<url>https://maven.ej-technologies.com/repository</url>
-		</pluginRepository>
-	</pluginRepositories>
 	<repositories>
         <repository>
             <id>ossrh-sshtools</id>
@@ -290,10 +282,6 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
-		<repository>
-			<id>ej-technologies</id>
-			<url>https://maven.ej-technologies.com/repository</url>
-		</repository>
 	</repositories>
 	<modules>
 		<module>daemon</module>
