--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -132,6 +132,7 @@
 		                        <configuration>
                                     <license>${install4j.testing.license}</license>
                                     <installDir>${install4j11.home}</installDir>
+                                    <jvmArguments>-Djava.awt.headless=true</jvmArguments>
 		                            <variables>
 		                                <install4j.phase>${install4j.phase}</install4j.phase>
 		                                <install4j.appleId>${install4j.appleId}</install4j.appleId>
