Revert "Temporarily removing Mac OS support from another build. It seems like Install4J11 cannot be run from Maven on MacOS from Jenkins Agent."
This reverts commit 5119324a426f1c6fd7083a5a6c46bba52f3a0be9.

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -168,6 +168,8 @@
                         <version>1.0.0</version>
                         <configuration>
                             <inputs>
+                                <input>${project.build.directory}/media-macos-amd64/updates.xml</input>
+                                <input>${project.build.directory}/media-macos-aarch64/updates.xml</input>
                                 <input>${project.build.directory}/media-windows/updates.xml</input>
                                 <input>${project.build.directory}/media-linux-amd64/updates.xml</input>
                                 <input>${project.build.directory}/media-linux-aarch64/updates.xml</input>
