--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -136,6 +136,10 @@
 		                            <variables>
 		                                <install4j.phase>${install4j.phase}</install4j.phase>
 		                                <install4j.appleId>${install4j.appleId}</install4j.appleId>
+		                                <install4j.appleIdPassword>${install4j.appleIdPassword}</install4j.appleIdPassword>
+		                                <install4j.appleIssuerId>${install4j.appleIssuerId}</install4j.appleIssuerId>
+		                                <install4j.appleKeyId>${install4j.appleKeyId}</install4j.appleKeyId>
+		                                <install4j.applePrivateKeyFile>${install4j.applePrivateKeyFile}</install4j.applePrivateKeyFile>
 		                                <install4j.exe.suffix>${install4j.exe.suffix}</install4j.exe.suffix>
 		                                <install4j.macPkcs12File>${install4j.macPkcs12File}</install4j.macPkcs12File>
 		                                <install4j.windowsKeystoreIssuer>${install4j.windowsKeystoreIssuer}</install4j.windowsKeystoreIssuer>
