--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
 	</developers>
 	<distributionManagement>
 		<snapshotRepository>
-			<id>ossrh-sshtools</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>central-sshtools-snapshots</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
 		</snapshotRepository>
 		<repository>
-			<id>ossrh-sshtools</id>
+			<id>central-sshtools</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
@@ -138,6 +138,15 @@
 	</dependencyManagement>
 	<build>
 		<plugins>
+		 	<plugin>
+          		<groupId>org.sonatype.central</groupId>
+          		<artifactId>central-publishing-maven-plugin</artifactId>
+          		<version>0.8.0</version>
+          		<extensions>true</extensions>
+          		<configuration>
+            		<publishingServerId>central</publishingServerId>
+          		</configuration>
+        	</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -275,13 +284,14 @@
         </profile>
     </profiles>
 	<repositories>
-        <repository>
-            <id>ossrh-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
+		<repository>
+			<id>oss-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots />
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
 	</repositories>
 	<modules>
 		<module>daemon</module>
