--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,6 @@
 			<email>brett@logonbox.com</email>
 		</developer>
 	</developers>
-	<distributionManagement>
-		<snapshotRepository>
-			<id>central-sshtools</id>
-			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -137,11 +131,6 @@
 		 	<plugin>
           		<groupId>org.sonatype.central</groupId>
           		<artifactId>central-publishing-maven-plugin</artifactId>
-          		<version>0.8.0</version>
-          		<extensions>true</extensions>
-          		<configuration>
-            		<publishingServerId>central-sshtools</publishingServerId>
-          		</configuration>
         	</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -167,6 +156,17 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+			 	<plugin>
+	          		<groupId>org.sonatype.central</groupId>
+	          		<artifactId>central-publishing-maven-plugin</artifactId>
+	          		<version>0.8.0</version>
+	          		<extensions>true</extensions>
+	          		<configuration>
+	            		<publishingServerId>central-sshtools</publishingServerId>
+			              <autoPublish>true</autoPublish>
+			              <waitUntil>published</waitUntil>
+	          		</configuration>
+	        	</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
@@ -176,18 +176,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>3.2.4</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.13</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <serverId>ossrh-sshtools</serverId>
-                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>
-                    </configuration>
                 </plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -272,8 +260,8 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
+		          		<groupId>org.sonatype.central</groupId>
+		          		<artifactId>central-publishing-maven-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
