--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -146,6 +146,16 @@
             </plugin>
 		</plugins>
 	</build>
+    <repositories>
+        <repository>
+            <id>opensource-snapshots</id>
+            <url>https://artifactory.jadaptive.com/opensource-snapshots</url>
+            <snapshots />
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
 	<profiles>
         <profile>
             <id>translate</id>
